test/ui/lowering/let-in-with-type-annotation-without-definition.lushui
foo = let x: Int in 0


